# gradient-routing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
factored_representations/: files.py  masklib.py  model_expansion.py  string_utils.py  training.py  utils.py
projects/cifar100/: README.md  analyze_results.py  cifar_100_models.py  cifar_100_representation_splitting.py
projects/minigrid/: .gitignore  README.md  agents.py  analyze_multiple_runs.py  analyze_results.py  bulk_runs.py  bulk_runs_ablations.py
projects/minigrid/src/: ntb_plots.py  ppo_nonrouted.py  ppo_routed.py  web_plots.py
projects/minigrid/src/factrep/: evaluation.py  layers.py  models.py  utils.py
projects/minigrid_repro/: README.md  agents.py  analysis_utils.py  analyze_k_values.py  analyze_multiple_runs.py  analyze_oversight_k_exps.py  analyze_oversight_levels.py  bulk_runs.py  bulk_runs_k_exp.py  bulk_runs_mini.py  bulk_runs_mini_debug.py  diagnostics.py  grid.py  hierarchical_rl_agent.py  training.py  training_k_exp.py
projects/minigrid_repro/data/oversight_levels — копия/: eval_results_252418.csv  eval_results_759821.csv  policy_252418.pt  policy_759821.pt
projects/minigrid_repro/data_debug/: eval_results_264679.csv  policy_264679.pt  train_results_264679.csv
projects/mnist/: README.md  ablations.py  analyze_runs_for_paper_main.py  base_autoencoder.py  linear_reconstruction.py  naive_mnist.py  partial_routing.py  representation_splitting.py  runs_for_paper_main.py  utils.py
projects/nanoGPT-factrep/: README.md  california-steering-scalar.py  coherence_ft_and_retrain_evals.py  configurator.py  dist_dataloader.py  eval.py  get-optimal-words-to-mask.py  get-virology-adjacent.py  load_model.py  load_special_text.py  model.py  nccl_test_script.py  rmu.py  rope.py  sample.py  scaling_laws.ipynb  train.py  transformer_sizing.ipynb
projects/nanoGPT-factrep/config/: train_gpt2.py
projects/tinystories/: README.md  analysis_tools.py  analyze_alignment_tax.py  analyze_bulk_hyperparam_runs.py  analyze_bulk_runs.py  analyze_partial_oversight_runs.py  bulk_runs_for_paper.py  bulk_runs_hyperparam_sweep.py  bulk_runs_partial_oversight.py  explore_model_generations.py  explore_non_masked_loss.py  explore_token_counts.py  explore_token_freq_masking.py  explore_tug_of_war.py  recompute_initial_losses_partial_oversight.py  rename.py  retraining_evals.py  rmu.py  rmu_erac_partial_oversight.py  rmu_partial_oversight.py  shared_settings.py  tinystories_era.py  tinystories_era_interp.py  top_words.json  unlearning_eval.py  visualize_logits.py
shared_configs/: model_configs.py  model_store.py
snippets/: data_dependent_gradient_routing.py  detach_demo.py  matmul_floating_point_error.py  split_loss_gradient_routing.py  tug_of_war_demo.py
tests/: conftest.py
tests/unit_tests/: test_cross_entropy_loss.py  test_masking.py  test_model_expansion.py  test_model_serialization.py  test_padding_side_indifference.py  test_random_shuffling.py  test_string_utils.py
(+87 files in other folders)
